OO-3609: replace OLog with Log4J 2